# internal/handler/handler.go
@@ -15,15 +15,24 @@ type Authorization interface {
 	ParseToken(ctx context.Context, tokenStr string) (handl.UserInfo, error)
 }
 
-type Handler struct {
-	log  *logging.Logger
-	auth Authorization
+type Profile interface {
+	GetUser(ctx context.Context, ID int) (*handl.User, error)
+	UpdateUser(ctx context.Context, ID int, updateInf handl.UpdateInfo) error
+	UpdatePassword(ctx context.Context, ID int, pwd handl.Passwords) error
 }
 
-func NewHandler(log *logging.Logger, auth Authorization) *Handler {
+type Handler struct {
+	log     *logging.Logger
+	auth    Authorization
+	profile Profile
+}
+
+func NewHandler(log *logging.Logger, auth Authorization, profile Profile) *Handler {
 	return &Handler{
-		log:  log,
-		auth: auth}
+		log:     log,
+		auth:    auth,
+		profile: profile,
+	}
 }
 
 func (h *Handler) InitRoutes() *mux.Router {
@@ -39,10 +48,16 @@ func (h *Handler) InitRoutes() *mux.Router {
 
 	api := http.StripPrefix("/api/", http.FileServer(http.Dir("./api/")))
 	unauth.PathPrefix("/api/").Handler(api)
+
 	unauth.HandleFunc("/reg", h.register).Methods(http.MethodPost)
 	unauth.HandleFunc("/auth", h.authenticate).Methods(http.MethodPost)
 
 	auth.Use(h.authentication)
+
+	user := auth.PathPrefix("/user").Subrouter()
+	user.HandleFunc("", h.getUser).Methods(http.MethodGet)
+	user.HandleFunc("", h.updateUser).Methods(http.MethodPut)
+	user.HandleFunc("/password", h.updatePassword).Methods(http.MethodPut)
 
 	h.log.Info("Routes inited")
 
